# max-bot-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/design/: 0001-v0.1.md  0002-v0.2-retry-policy.md  0003-v0.3.md
docs/plans/: 0001-v0.1-implementation.md  0002-v0.2-retry-policy.md  0003-v0.3-implementation.md
src/max_bot_api/: __init__.py  client.py  exceptions.py  retry.py  transport.py
src/max_bot_api/models/: __init__.py  _internal.py  attachments.py  bot.py  chats.py  keyboards.py  messages.py  subscriptions.py  updates.py  uploads.py
tests/: conftest.py  test_client_actions.py  test_client_chats.py  test_client_introspection.py  test_client_messages.py  test_client_retry.py  test_client_subscriptions.py  test_client_updates.py  test_client_upload_helpers.py  test_client_uploads.py  test_exceptions.py  test_models_attachments.py  test_models_bot.py  test_models_chats.py  test_models_messages.py  test_models_subscriptions.py  test_models_updates.py  test_retry.py  test_transport.py
