[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "max-bot-api"
dynamic = ["version"]
description = "Async Python client for the Max messenger Bot API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kitaeza" }]
keywords = ["max", "messenger", "bot", "api", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/Kitaeza/max-bot-api"
Repository = "https://github.com/Kitaeza/max-bot-api"
Documentation = "https://github.com/Kitaeza/max-bot-api/blob/main/README.md"
Changelog = "https://github.com/Kitaeza/max-bot-api/blob/main/CHANGELOG.md"
Issues = "https://github.com/Kitaeza/max-bot-api/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.version]
path = "src/max_bot_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/max_bot_api"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
addopts = "--cov=max_bot_api --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
